@@ -578,6 +578,9 @@ and should be a maximum of 24 characters to not mis-align columns.
 .BI \-\-date-format \ format
 Identical to \fB\-D\fR.
 .TP
+.BI \-\-delimiter \ delim
+Set the delimiter between each column to \fIdelim\fR instead of variable space. Must be a single character.
+.TP
 .B e
 Show the environment after the command.
 .TP
