@@ -84,6 +84,10 @@ set fd_count [ exec stat -c %s /proc/$testproc1_pid/fd ]
 spawn $ps -o fds $testproc1_pid
 expect_pass "$test" "^FDS\\s+$fd_count\\s*$"
 
+set test "ps with delimiter"
+spawn $ps -o pid,ucmd --delimiter : $testproc1_pid
+expect_pass "$test" "PID:CMD\\s+$testproc1_pid:spcorp\\s*$"
+
 # End of test process
 kill_testproc
 
